tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:17:15: error: incompatible types: 'i64' and 'binary_search_tree.Value'
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:17:9: note: type 'i64' here
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:17:21: note: type 'binary_search_tree.Value' here
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:42:16: error: expected type '[]i64', found '[]const i64'
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:42:16: note: cast discards const qualifier
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:40:51: note: function return type declared here
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:31:15: error: incompatible types: 'i64' and 'binary_search_tree.Value'
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:31:9: note: type 'i64' here
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:31:22: note: type 'binary_search_tree.Value' here
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:52:45: error: operator != not allowed for type 'binary_search_tree.Value'
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:61:45: error: operator != not allowed for type 'binary_search_tree.Value'
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:71:15: error: incompatible types: 'i64' and 'binary_search_tree.Value'
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:71:9: note: type 'i64' here
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:71:21: note: type 'binary_search_tree.Value' here
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig:10:20: error: array literal requires address-of operator (&) to coerce to slice type '[]binary_search_tree.Value'