tests/algorithms/transpiler/Zig/data_structures/binary_tree/binary_search_tree.zig
// Generated by Mochi Zig transpiler on 2025-08-08 16:22 +0700
const std = @import("std");
const Value = union(enum) { Null: void, Int: i64, Float: f64, Str: []const u8, Bool: bool, List: []Value, StrList: [][]const u8, };

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

fn create_node(value: i64) []Value {
    return [3]Value{Value{.Int = value}, Value{.Null = {}}, Value{.Null = {}}};
}

fn insert(node: []const Value, value: i64) []Value {
    if (node.len == 0) {
        return create_node(value);
    }
    if (value < node[@as(usize, @intCast(0))]) {
        node[@as(usize, @intCast(1))] = insert(node[@as(usize, @intCast(1))], value);
    } else {
        if (value > node[@as(usize, @intCast(0))]) {
            node[@as(usize, @intCast(2))] = insert(node[@as(usize, @intCast(2))], value);
        }
    }
    return node;
}

fn search(node: []const Value, value: i64) bool {
    if (node.len == 0) {
        return false;
    }
    if (value == node[@as(usize, @intCast(0))]) {
        return true;
    }
    if (value < node[@as(usize, @intCast(0))]) {
        return search(node[@as(usize, @intCast(1))], value);
    }
    return search(node[@as(usize, @intCast(2))], value);
}

fn inorder(node: []const Value, acc: []const i64) []i64 {
    if (node.len == 0) {
        return acc;
    }
    const left_acc: []const i64 = inorder(node[@as(usize, @intCast(1))], acc);
    const with_node: []const i64 = blk: { var _tmp = std.ArrayList(i64).init(std.heap.page_allocator); _tmp.appendSlice(@as([]const i64, left_acc)) catch |err| handleError(err); _tmp.append(node[@as(usize, @intCast(0))]) catch |err| handleError(err); break :blk (_tmp.toOwnedSlice() catch |err| handleError(err)); };
    return inorder(node[@as(usize, @intCast(2))], with_node[0..]);
}

fn find_min(node: []const Value) i64 {
    var current: []const Value = blk: { const tmp = std.heap.page_allocator.alloc(Value, node.len) catch unreachable; @memcpy(tmp, node); break :blk tmp; };
    current = current;
    while (current[@as(usize, @intCast(1))] != (Value{.Null = {}})) {
        current = current[@as(usize, @intCast(1))];
    }
    return current[@as(usize, @intCast(0))];
}

fn find_max(node: []const Value) i64 {
    var current: []const Value = blk: { const tmp = std.heap.page_allocator.alloc(Value, node.len) catch unreachable; @memcpy(tmp, node); break :blk tmp; };
    current = current;
    while (current[@as(usize, @intCast(2))] != (Value{.Null = {}})) {
        current = current[@as(usize, @intCast(2))];
    }
    return current[@as(usize, @intCast(0))];
}

fn delete(node: []const Value, value: i64) []Value {
    if (node.len == 0) {
        return &[_]Value{};
    }
    if (value < node[@as(usize, @intCast(0))]) {
        node[@as(usize, @intCast(1))] = delete(node[@as(usize, @intCast(1))], value);
    } else {
        if (value > node[@as(usize, @intCast(0))]) {
            node[@as(usize, @intCast(2))] = delete(node[@as(usize, @intCast(2))], value);
        } else {
            if (node[@as(usize, @intCast(1))] == (Value{.Null = {}})) {
                return node[@as(usize, @intCast(2))];
            }
            if (node[@as(usize, @intCast(2))] == (Value{.Null = {}})) {
                return node[@as(usize, @intCast(1))];
            }
            const min_val: i64 = find_min(node[@as(usize, @intCast(2))]);
            node[@as(usize, @intCast(0))] = min_val;
            node[@as(usize, @intCast(2))] = delete(node[@as(usize, @intCast(2))], min_val);
        }
    }
    return node;
}

fn mochi_main() void {
    var root: []Value = &[_]Value{};
    root = root;
    const nums: []const i64 = (&([9]i64{8, 3, 6, 1, 10, 14, 13, 4, 7}))[0..];
    for (nums) |__it0| {
        const v = __it0;
        root = insert(root[0..], v);
    }
    std.debug.print("{s}\n", .{_str(inorder(root[0..], ([0]i64{})[0..]))});
    std.debug.print("{s}\n", .{_str(search(root[0..], 6))});
    std.debug.print("{s}\n", .{_str(search(root[0..], 20))});
    std.debug.print("{s}\n", .{_str(find_min(root[0..]))});
    std.debug.print("{s}\n", .{_str(find_max(root[0..]))});
    root = delete(root[0..], 6);
    std.debug.print("{s}\n", .{_str(inorder(root[0..], ([0]i64{})[0..]))});
}

pub fn main() void {
    {
        const __start = _now();
        const __start_mem: i64 = _mem();
        mochi_main();
        const __end = _now();
        const __end_mem: i64 = _mem();
        const __duration_us: i64 = @divTrunc(@as(i64, @intCast(__end - __start)), 1000);
        const __mem_diff: i64 = __end_mem - __start_mem;
        const __memory_bytes: i64 = if (__mem_diff < 0) -__mem_diff else __mem_diff;
        std.debug.print("{{\"duration_us\":{d},\"memory_bytes\":{d},\"name\":\"main\"}}\n", .{__duration_us, __memory_bytes});
    }
}

var _now_seed: i64 = 0;
var _now_seeded: bool = false;
fn _now() i64 {
    if (_now_seeded) {
        _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
        return _now_seed;
    }
    if (! _now_seeded) {
        if (std.process.getEnvVarOwned(std.heap.page_allocator, "MOCHI_NOW_SEED")) |env_seed| {
            defer std.heap.page_allocator.free(env_seed);
            if (std.fmt.parseInt(i64, env_seed, 10)) |v| {
                _now_seed = v;
                _now_seeded = true;
                _now_seed = @mod(_now_seed * 1664525 + 1013904223, 2147483647);
                return _now_seed;
            } else |_| {}
        } else |_| {}
    }
    return @as(i64, @intCast(std.time.nanoTimestamp()));
}

fn _str(v: anytype) []const u8 {
    if (@TypeOf(v) == f64 or @TypeOf(v) == f32) {
        return std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{v}) catch unreachable;
    }
    if (@TypeOf(v) == Value) {
        return switch (v) {
            .Int => std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{v.Int}) catch unreachable,
            .Float => std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{v.Float}) catch unreachable,
            .Str => std.fmt.allocPrint(std.heap.page_allocator, "'{s}'", .{v.Str}) catch unreachable,
            .Bool => if (v.Bool) "true" else "false",
            .List => _str(v.List),
            .StrList => _str(v.StrList),
            else => "null",
        };
    }
    const info = @typeInfo(@TypeOf(v));
    switch (info) {
    .Pointer => |p| {
        if (p.size == .Slice) {
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.append('[') catch unreachable;
            for (v, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                const s = _str(e);
                out.appendSlice(s) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    .Struct => |_| {
        if (@hasDecl(@TypeOf(v), "iterator")) {
            const Pair = struct{ ks: []const u8, vs: []const u8 };
            var pairs = std.ArrayList(Pair).init(std.heap.page_allocator);
            defer pairs.deinit();
            var it = v.iterator();
            while (it.next()) |e| {
                const ks = _str(e.key_ptr.*);
                const vs = _str(e.value_ptr.*);
                pairs.append(.{ .ks = ks, .vs = vs }) catch unreachable;
            }
            std.sort.heap(Pair, pairs.items, {}, struct {
                pub fn less(_: void, a: Pair, b: Pair) bool {
                    return std.mem.lessThan(u8, a.ks, b.ks);
                }
            }.less);
            var out = std.ArrayList(u8).init(std.heap.page_allocator);
            defer out.deinit();
            out.appendSlice("map[") catch unreachable;
            for (pairs.items, 0..) |e, i| {
                if (i != 0) { out.append(' ') catch unreachable; }
                out.appendSlice(e.ks) catch unreachable;
                out.append(':') catch unreachable;
                out.appendSlice(e.vs) catch unreachable;
            }
            out.append(']') catch unreachable;
            return out.toOwnedSlice() catch unreachable;
        }
    },
    else => {},
    }
    return std.fmt.allocPrint(std.heap.page_allocator, "{any}", .{v}) catch unreachable;
}

fn _mem() i64 {
    const path = "/proc/self/statm";
    var file = std.fs.openFileAbsolute(path, .{}) catch return 0;
    defer file.close();
    var buf: [64]u8 = undefined;
    const n = file.readAll(&buf) catch return 0;
    var it = std.mem.tokenizeScalar(u8, buf[0..n], ' ');
    _ = it.next(); // total program size
    if (it.next()) |tok| {
        const pages = std.fmt.parseInt(i64, tok, 10) catch return 0;
        return pages * std.mem.page_size;
    }
    return 0;
}

fn _print(v: []const u8) void {
    std.debug.print("{s}\n", .{v});
}
